// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"class Foo {
  private constructor() {}
}
"
`;

exports[` 2`] = `
"class Foo {
  protected constructor() {}
}
"
`;

exports[` 3`] = `
"class Foo {
  @decorator()
  foo() {}
}
"
`;

exports[` 4`] = `
"abstract class Base {
  protected greet(): void {
    console.log('Hello!');
  }
}

class Foo extends Base {
  protected override greet(): void {}
}
"
`;
